# data-analytics-project-100

./: .env  .gitignore  Project_notebook-Copy1.ipynb  Project_notebook.ipynb  README.md  ads.json  charts_project.ipynb  conversion.json  out.json  pyproject.toml  Проект_дашборд_конверсий.ipynb
charts_project/hexlet-code/: main.py
hexlet-code/: conversion.json  main.py  pyproject.toml
