[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["mariapolyakova888 <guard_dafna@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
requests = "^2.31.0"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
seaborn = "^0.13.0"
pip = "^23.3.2"
python-dotenv = "^1.0.0"
numpy = "^1.26.2"


[tool.poetry.scripts]
main = "charts_project.main:run_all"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
