[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["mariapolyakova888 <guard_dafna@mail.ru>"]
readme = "README.md"
packages = [{include = "charts_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
requests = "^2.31.0"
matplotlib = "^3.8.2"
python-dotenv = "^1.0.0"
numpy = "^1.26.2"


[tool.poetry.scripts]
main = "charts_project.hexlet-code.main:run_all"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
